--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import NoiseBackground from "../components/NoiseBackground.astro";
+
 interface Props {
   title: string;
 }
@@ -14,9 +16,11 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="stylesheet" href="/node_modules/aos/dist/aos.css" />
     <title>{title}</title>
   </head>
-  <body class="bg-gray-50">
+  <body class="bg-gray-100">
+    <NoiseBackground />
     <slot />
   </body>
 </html>
