--- a/src/pages/asis-personal-virtual.astro
+++ b/src/pages/asis-personal-virtual.astro
@@ -11,6 +11,7 @@ import Blog from "../components/Blog.astro";
     manera en que gestionamos nuestras agendas, nos comunicamos y accedemos a la
     información.
   </p>
+  <img src="/right-ai.png" alt="" class="rounded-md" />
   <p>
     Los asistentes virtuales como Siri de Apple, Alexa de Amazon y Google
     Assistant utilizan IA para realizar tareas rutinarias como establecer
