--- a/src/pages/educacion.astro
+++ b/src/pages/educacion.astro
@@ -10,6 +10,7 @@ import Blog from "../components/Blog.astro";
     hasta análisis predictivo del rendimiento estudiantil, la IA está cambiando
     la forma en que se enseña y se aprende en las aulas y más allá
   </p>
+  <img src="/image8.png" alt="" class="rounded-md" />
   <p>
     La IA permite adaptar los contenidos educativos y las estrategias de
     enseñanza según las necesidades y estilos de aprendizaje individuales de los
