--- a/src/pages/manufactura.astro
+++ b/src/pages/manufactura.astro
@@ -14,6 +14,7 @@ import Blog from "../components/Blog.astro";
     transformando radicalmente la forma en que se producen bienes y se gestionan
     las operaciones en las plantas industriales.
   </p>
+  <img src="/image2.png" alt="" class="rounded-md" />
   <p>
     La IA permite la automatización de tareas repetitivas y complejas en las
     líneas de producción, reduciendo los errores humanos y aumentando la
