--- a/src/pages/medicina.astro
+++ b/src/pages/medicina.astro
@@ -11,6 +11,7 @@ import Blog from "../components/Blog.astro";
     datos, la IA está cambiando radicalmente la forma en que se proporciona la
     atención sanitaria.
   </p>
+  <img src="/image6.png" alt="" class="rounded-md" />
   <p>
     Los sistemas de IA pueden analizar imágenes médicas, como tomografías
     computarizadas (TC) y resonancias magnéticas (RM), para detectar patrones y
