--- a/src/pages/salud.astro
+++ b/src/pages/salud.astro
@@ -12,6 +12,7 @@ import Blog from "../components/Blog.astro";
     transformando radicalmente la forma en que se ofrece y gestiona la atención
     médica.
   </p>
+  <img src="/image7.png" alt="" class="rounded-md" />
   <p>
     Los sistemas de IA pueden analizar imágenes médicas, como tomografías
     computarizadas (TC) y resonancias magnéticas (RM), para detectar patrones y
