--- a/src/pages/servicios-financieros.astro
+++ b/src/pages/servicios-financieros.astro
@@ -13,6 +13,7 @@ import Blog from "../components/Blog.astro";
     fraudes hasta la personalización de servicios, la IA está desempeñando un
     papel crucial en la innovación y competitividad del sector.
   </p>
+  <img src="/image4.png" alt="" class="rounded-md" />
   <p>
     La IA ayuda a detectar patrones y anomalías en las transacciones financieras
     en tiempo real, lo que permite a las instituciones financieras prevenir y
