--- a/src/pages/tiendas-online.astro
+++ b/src/pages/tiendas-online.astro
@@ -14,6 +14,7 @@ import Blog from "../components/Blog.astro";
     la IA está transformando radicalmente la manera en que se compran y venden
     productos en línea.
   </p>
+  <img src="/image1.png" alt="" class="rounded-md" />
   <p>
     Los algoritmos de IA analizan el comportamiento del usuario y los datos de
     compra para ofrecer recomendaciones de productos personalizadas, aumentando
