--- a/src/pages/ventas.astro
+++ b/src/pages/ventas.astro
@@ -14,6 +14,7 @@ import Blog from "../components/Blog.astro";
     la personalización de ofertas y la optimización de procesos, la IA está
     impulsando la eficiencia y la efectividad de las estrategias comerciales.
   </p>
+  <img src="/image5.png" alt="" class="rounded-md" />
   <p>
     La capacidad de la IA para analizar grandes volúmenes de datos históricos y
     en tiempo real permite a las empresas prever con mayor precisión las
