--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -50,4 +50,10 @@ const { title, subTitle } = Astro.props;
       </div>
     </section>
   </main>
+  <footer>
+    <div class="flex flex-col items-center gap-2 py-6 text-xl text-center">
+      <p>© 2024 IA SOLUTION</p>
+      <p>Andrés Larraya</p>
+    </div>
+  </footer>
 </Layout>
