--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -430,6 +430,12 @@ import Venta from "./ventas.astro";
       >
     </section>
   </main>
+  <footer>
+    <div class="flex flex-col items-center gap-2 py-6 text-xl text-center">
+      <p>© 2024 IA SOLUTION</p>
+      <p>Andrés Larraya</p>
+    </div>
+  </footer>
 </Layout>
 
 <script>
